Fix center on mobile

--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ svg {
     place-items: center;
 }
 .hero-banner { 
+    display: grid;
+    place-items: center;
     height: 100%;
     min-height: 100vh;
     background: linear-gradient(45deg, rgba(27, 49, 45, 0.5) 10%, rgba(27, 49, 45, 0.4));
